--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
 }
 
 .container {
-    background: url('bg.png') no-repeat center center;
+    background: url('basitadam.jpg') no-repeat center center;
     height: 100vh;
     background-size: unset;
     position: relative;
